# bluesky-social-recommendations

./: README.md  package-lock.json  package.json
api/: cargo.toml
api/bskyapi/: .env  Cargo.toml
api/bskyapi/src/: client.rs  main.rs
bsky_app/: app.json  package.json
bsky_app/android/: settings.gradle
bsky_app/android/app/: build.gradle
bsky_app/android/app/src/main/java/com/bsky_app/: MainActivity.kt  MainApplication.kt
bsky_app/android/app/src/main/res/values/: strings.xml
bsky_app/ios/: Podfile
bsky_app/ios/bsky_app/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
bsky_app/ios/bsky_app.xcodeproj/: project.pbxproj
bsky_app/ios/bsky_app.xcodeproj/xcshareddata/xcschemes/: bsky_app.xcscheme
bsky_app/ios/bsky_appTests/: bsky_appTests.m
bsky_web/: app.json  package-lock.json  package.json
bsky_web/app/(tabs)/: two.tsx
